<resources>
    <string name="app_name">Вақтҳои Намоз</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mj_hz_usmon_somoni">Масҷиди ҷомеи ба номи Усмон ибни Аффон (р) соли 1952 таъсис ёфтааст. Ин масҷид то соли 2007 ҳамчун масҷиди панҷвақта фаъолият мекард. Аз соли 2007 то ҳозир ҳам чун масҷиди ҷомеъ фаъолият дорад.

Пас аз таъмиру аз навсозӣ масҷиди мазкур тақрибан 700 то 1000 нафар намозгузорро дар як вақт гунҷоиш дода метавонад. Минбару сақф,сутунҳо ва дарвозаи масҷид бо чӯб кандакорӣ ва ороиш дода, симои зебои меъмории миллӣ дорад.</string>
    <string name="mj_rumi">Масҷиди ҷомеи ба номи Ҷалолуддини Румӣ дар ноҳияи Шоҳмансури шаҳри Душанбе бунёд ёфтааст. Масҷид дар масофаи 2 км болотар аз шоҳроҳи Душанбе – Ваҳдат ҷойгир шудааст. Масҷиди мазкур соли 1989 бунёд гардида, то соли 2006 фаъолият мекунад. Соли 2006 масҷид таъмиру азнавсозӣ шуда, корҳои сохтмонии он бо дастгирӣ ва саҳмгузории мардони саховатпеша, соҳибкорони ватанӣ ва мардуми маҳаллаи “Бӯстон -3”-и ноҳияи Шоҳмансур ба итмом мерасад.

Бинои масҷид дуошёна буда, дорои ду манораи бузург, таҳхона барои намозгузорӣ, ду айвон дар ошёнаи аввал ва дорои се айвон дар ошёнаи дувум мебошад.

Таҳхонаи масҷид 12 сутун дошта, 800 ҷойи намозгузорӣ дорад. Толори якум низ 12 сутун дошта, 800 нафар намозгузорро мегунҷонад. Ошёнаи дуюм низ дорои 12 сутун буда, 900 нафарро дар худ ҷой медиҳад. Дар маҷмуъ дохили толорҳо ва айвонҳои масҷид дар як ваќт 2500 намозгузорро мегунҷонад.

Деворҳо ва сутунҳои масҷид бо гач ва санги мармар оро дода шудаанд. Манораи масҷид аз хишти пухта сохта шуда, 20 м баландӣ дорад ва бо кошинҳои сафолӣ ороиш ёфтааст.</string>
    <string name="mj_hz_usmon_rudaki">Таъсиси масҷиди ҷомеи ба номи ҳазрати Усмон (р)-и ноҳияи Рӯдакӣ ба соли 1989 рост меояд. Сохтмони масҷиди мазкур моҳи январи ҳамон сол оғоз шуда, моҳи сентябр ба анҷом мерасад. Ба таври умум, масҷид ба тариқи ҳашар сохта мешавад.  Корҳои меъморӣ ва кандакории дару тиреза ва сақфу сутунҳои масҷӣд аз тарафи устоҳои моҳир ба иҷро мерасанд.

Дар аввал масҷид ҳамчун масҷиди панҷвақта амал намуда, аз соли 1990 ба ҳайси масҷиди ҷомеъ фаъолият мекунад. Масҷиди номбурда мувофиқи низомнома амал карда, дар Вазорати фарҳанг таҳти № 166 аз 09.10.2009 ба қайд гирифта шудааст.

Аз соли 2009 бинои масҷид таъмиру тавсиа дода мешавад ва азнавсозии он соли 2013 ба анҷом мерасад. Дар масҷид шароити муносиб фароҳам оварда шудааст, ки дар як вақт метавонад то 1500 намозгузорро гунҷоиш диҳад.</string>
    <string name="mj_imom_firdavsi">Масҷиди ҷомеи ба номи Имоми Аъзами ноҳияи Фирдавсӣ соли 1986 сохта шуда, дар аввал ҳамчун ҷои ҷамъиятӣ фаъолият намудааст. Пас аз муддате дар асоси муроҷиати сокинони шаҳраки 65-ум дар бораи ҷойҳои ҷамъиятии ҳамчун масҷид пешниҳодшуда қарори раиси шаҳри Душанбе таҳти № 147 аз 7-уми апрели соли 2006 қабул карда мешавад. Дар ин муддат бинои масҷид бо тариқи ҳашар сохта мешавад.

Бо мақсади ба низом даровардани фаъолияти масҷидҳои панҷвақта бобати адои намози ҷумъа бо қарори раиси шаҳри Душанбе аз моҳи апрели соли 2011 иҷозати хондани намози ҷумъа дода мешавад. Аз соли 2011 бинои масҷид барои намозгузорон тавсиа дода шуда, таъмиру азнавсозӣ карда мешавад.</string>
    <string name="mj_mhdjon_firdavsi">Таъсиси масҷиди ҷомеи марказии ба номи Мавлавӣ Муҳаммадҷон ба солҳои 1946 рост меояд. Масҷиди мазкур бори аввал ҳамчун масҷиди панҷвақта ба қайд гирифта шуда, аз соли 1946 то соли 1951 фаъолият намудааст. Баъдан як муддат ҳамчун хонаи истиқоматӣ қарор дода мешавад. Пас аз он иморати масҷид аз байн бурда шуда, ба ҷойи он дармонгоҳи № 3 сохта мешавад ва аз бинои масҷид танҳо як хона боқӣ мемонад.

Мувофиқи маълумотномаҳои бойгонӣ масҷиди маҳаллаи Алочабофон дар соли 1946 ҳамчун ҷойи эҳтиёҷоти динӣ ба қайд гирифта шудааст ва ягон ҳуҷҷат барои барҳам додани он вуҷуд надорад. Минбаъд бо қарори Кумитаи иҷроияи ноҳияи Марказӣ (ҳозира ноҳияи Фирдавсӣ) таҳти № 218 аз 10 марти соли 1989 барои сохтани масҷид ва қонеъ гардонидани эҳтиёҷоти динӣ дар маҳаллаи Алочабофон иҷозат дода мешавад. Мувофиқи ин қарор масҷиди ҷомеъ аз ҳисоби маблағи намозгузорони маҳалла бо тариқи ҳашар сохта ба истифода дода мешавад. Масҷиди мазкур баъди аз нав сохта шуданаш 10 апрели соли 1998 дар Кумитаи оид ба корҳои дин ва танзиму анъана ва ҷашну маросимҳои миллии назди Ҳукумати Ҷумҳурии Тоҷикистон ҳамчун масҷиди ҷомеи ба номи Абӯбакри Сиддиқ ба қайд гирифта мешавад.

Баъдан бо қарори маҷлиси муассисон аз 18 феврали соли 2010 масҷиди мазкур ҳамчун масҷиди ҷомеи марказии ноҳияи Фирдавсӣ ба номи Мавлавӣ Муҳаммадҷон ба қайд гирифта мешавад.</string>
    <string name="mj_imom_hisor">Масҷиди ҷомеи марказии ноҳияи Ҳисор ба номи Имоми Аъзам дар қисмати шимолии деҳаи Тӯдаи ҷамоати деҳоти Мирзо Ризо бунёд ёфтааст. Масҷид дар масофаи 2 км болотар аз шоҳроҳи Душанбе – Турсунзода ҷойгир шудааст. Сохтмони масҷид аз моҳи майи соли 2006 оғоз ёфта, моҳи октябри соли 2009 ба анҷом расидааст. Кори сохтмони он бо дастгирӣ ва саҳмгузории ҷавонмардони саховатманд, соҳибкорони ватанӣ, мардуми деҳаи Тӯда ва деҳаҳои ҷамоати деҳоти Мирзо Ризо ба анҷом расонида шудааст.

Бинои масҷид дуошёна буда, дорои ду айвон ва як манораи бузург мебошад. Ошёнаи якум ду толори намозгузорӣ дорад,  ки дохили он бо ҳунари гачкорӣ ва нақшу нигори миллӣ оро ёфтааст. Толори аввал дорои 30 сутун буда, 2700 ҷойи намозгузорӣ дорад. Толори дуюм низ бо гачкорӣ ва наққошии миллӣ ороиш ёфтааст. Сақфи толор дорои як гунбази оинакорӣ буда, 12 сутун ва 1400 ҷои намозгузорӣ дорад. Айвони тарафи рост дорои 410 ҷой ва айвони тарафи чап дорои 480 ҷойи намозгузорӣ мебошад.

Ошёнаи дуюм дорои як толор буда, 30 сутун дорад ва аз 2700 ҷойи намозгузорӣ иборат аст. Айвони ошёнаи дуюм дорои 410 ҷойи намозгузорӣ мебошад. Дар маҷмуъ дохили толорҳо ва айвонҳои масҷид 8100 ҷойи намозгузорӣ дорад.

Манораи масҷид аз хишти пухта сохта шуда, бо кошинҳои сафолӣ оро дода шудааст. Баландии манора 36 метр мебошад. Даромадгоҳи асосии масҷид бо ду манора ороиш ёфтааст, ки «Гулдаста» ном дорад. Деворҳои берунаи масҷид бо кошинҳои сафолӣ зебу зинат ёфтааст.

Масҷид рӯзи 4-уми октябри соли 2009-ум дар арафаи чорабиниҳои бахшида ба «1310 солагии бузургдошти Имоми Аъзам» ба таври расмӣ кушода шуда, номи Имоми Аъзамро гирифтааст.</string>
    <string name="mj_hz_bilol">Масҷиди ба номи ҳазрати Билол (р) соли 1990 бунёд шудааст. Масҷиди мазкур то соли 2013 ҳамчун масҷиди панҷвақта амал мекард ва инак муддати ду сол аст, ки ҳамчун масҷиди ҷомеъ фаъолият карда истодааст. Азнавсозии масҷид соли 2011 шуруъ гардида, соли 2013 пурра ба анҷом расид. Масҷид аз чор ошёна иборат буда, дорои як гунбаз, як манора ва се даромадгоҳ мебошад. Тарҳи бинои масҷид ҷолибу диданӣ ва мутобиқ ба стандарти ҷаҳонист. Қисмати дохилии гунбази он ҳаштгӯша буда, ҳашт сутуни гачкоришуда дорад ва сақфи он бо нақшу нигори зебои миллӣ ороиш дода шудааст. Ба таври умум, дохили масҷид бо ҳунари гачкорию наққошӣ зебу оро ёфта, диққати ҳар бинандаро ба худ ҷалб мекунад.</string>
    <string name="mj_imom_shomansur">Масҷиди Шоҳмансур, ки алҳол ҳамчун масҷиди марказии ба номи Имоми Аъзами ноҳияи Шоҳмансур фаъолият дорад, яке аз масҷидҳои қадимтарини шаҳри Душанбе ба шумор меравад. Ин масҷид пеш аз замони шӯравӣ вуҷуд дошта, то замонҳои баъд бо номи масҷиди Одинабой машҳур будааст. Дар аввалҳои ҳукумати шӯравӣ ин масҷид аз фаъолият бозмемонад. Вале баъдтар, тахминан дар солҳои 1943-1944 бо кӯшиши бархе аз сокинони ҳамин деҳа ва бо кӯмаку дастгирии яке аз раисони ҳамонвақтаи ноҳия дубора ба фаъолият шуруъ мекунад.

Баъди бино шудани масҷид Қорӣ Шодӣ ном шахс аввалин хатиби масҷид таъйин мегардад. Баъдан тақрибан дар солҳои 1946-47 Қозӣ Абдуррашид, ки яке аз устодони уламои Тоҷикистон ба шумор меравад, дар ҳамин масҷид ба ҳайси имомхатиб таъйин мешавад. Дар соли 1956 масҷид бори дигар бо кӯшиши Қозӣ Абдуррашид куллан таъмиру тармим карда мешавад.

Баъдан домулло Ҳикматуллоҳ, ки аз мардуми Фарғона буд, имомхатиби масҷиди Шоҳмансур таъйин мегардад ва муддати 20 сол хатибӣ мекунад. Соли 1970 дар давраи хатибии домулло Ҳикматуллоҳ масҷид бори сеюм тармим шуда, бо санъати кандакорӣ хеле зебо мегардад.

Баъдан домулло Шербобо имомхатиби масҷид таъйин мегардад. Дар муддати хатибии домулло Шербобо баъзе тағйироту дигаргуниҳо дар бинои масҷид ворид гардида, таҳоратхонаҳо ба шакли замонавӣ сохта мешаванд.

Соли 1997, ки дар кишвар бесарусомониҳо ҳукмфармо буд, ба сабабҳои номаълум масҷид оташ мегирад. Аз сабаби он ки масҷид сар то сар аз чӯб сохта шуда буд, дар муддати 20 дақиқа тамоми масҷидро оташ фаро мегирад ва дар фосилаи байни намози асру шом аз масҷид нишоне боқӣ намемонад.

Хушбахтона, бо кӯмаку дастгирии соҳибкорони ватанӣ ва мардони саховатманди кишвар бинои масҷид аз нав бунёд ва бо суръат идома ёфта, дар давраи имомхатибии Саидов Абдулбасир сохтмони он пурра ба итмом мерасад. Аз се тарафи масҷид айвонҳо сохта мешавад, ки ҳамчун масҷид аз ду ошёна иборатанд. Ошёнаи аввал дорои ду ҳуҷра ва як толори васеъ, ошёнаи дуюм дорои се ҳуҷра ва як толор мебошад.

Масҷид ба шакли замонавӣ бино ёфта, даруни он гаҷкорӣ шудааст ва бо нақшу нигор оро ёфтааст. Дар дохили гунбаз бо хатти настаълиқи зебо «Оятул-Курсӣ» навишта шудааст. Намуди берунии масҷид аз ду гунбаз иборат аст, ки яке дар болои масҷид ва дигаре дар болои дарвоза қарор дорад.  Хамчунин як манора, ки 21 метр баландӣ дорад, ба масҷид зебу зинат бахшидааст.

Масҷид то соли 2010 ҳамчун масҷиди ҷомеи ба номи Шоҳамнсур фаъолият мекард. Аз соли 2010 ҳамчун масҷиди марказии ба номи Имоми Аъзами ноҳияи Шоҳмансур ба расмият даромада, то имрӯз фаъолият карда истодааст.</string>
    <string name="footer_today">ИМРУЗ</string>
    <string name="footer_times">ВАКТХО</string>
    <string name="footer_quran">КУРОН</string>
    <string name="footer_more">ДИГАР</string>
    <string name="footer_mosque">МАСОЧИД</string>
    <string name="title_times">Вактхои Имруза</string>
    <string name="time_name_1">Бомдод</string>
    <string name="time_name_2">Тулӯъ</string>
    <string name="time_name_3">Пешин</string>
    <string name="time_name_4">Аср</string>
    <string name="time_name_5">Шом</string>
    <string name="time_name_6">Хуфтан</string>
</resources>