<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="2dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:id="@+id/ll_today"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_ic_today"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:duplicateParentState="true"
                android:textColor="@color/selector_main_text_color"
                android:text="@string/footer_today" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:id="@+id/ll_times"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_ic_times"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:duplicateParentState="true"
                android:textColor="@color/selector_main_text_color"
                android:text="@string/footer_times"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:id="@+id/ll_quran"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_ic_quran"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:duplicateParentState="true"
                android:textColor="@color/selector_main_text_color"
                android:text="@string/footer_quran"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:id="@+id/ll_mosque"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_ic_mosque"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:duplicateParentState="true"
                android:textColor="@color/selector_main_text_color"
                android:text="@string/footer_mosque"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:id="@+id/ll_more"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_ic_more"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:duplicateParentState="true"
                android:textColor="@color/selector_main_text_color"
                android:text="@string/footer_more"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>