<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_times"
            android:textStyle="bold"
            android:textSize="21sp"
            android:gravity="center"
            android:textColor="@color/blackDark"
            app:fontFamily="sans-serif"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_location"
            android:text="Душанбе"
            android:textSize="15sp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/blackDark"
            app:fontFamily="sans-serif"
            android:layout_marginBottom="16dp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/prev_time"
                    android:src="@drawable/selector_ic_prev"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/greenMain"
                    android:id="@+id/time_today"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/next_time"
                    android:src="@drawable/selector_ic_next"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_1"
                        android:text="@string/time_name_1"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_1"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_2"
                        android:text="@string/time_name_2"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_2"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_3"
                        android:text="@string/time_name_3"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_3"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_4"
                        android:text="@string/time_name_4"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_4"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_5"
                        android:text="@string/time_name_5"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_5"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:id="@+id/time_name_6"
                        android:text="@string/time_name_6"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:gravity="left"
                        android:id="@+id/time_time_6"
                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>